crates/slideforge-docx/src/tests/snapshots/slideforge_docx__tests__core_tests__inline_bold_italic_document_xml.snap
---
source: crates/slideforge-docx/src/tests/core_tests.rs
expression: doc_xml
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<w:document xmlns:w="http://schemas.openxmlformats.org/wordprocessingml/2006/main"><w:body><w:p><w:pPr><w:pStyle w:val="Heading1" /></w:pPr><w:r><w:t>Formatting Slide</w:t></w:r></w:p><w:p><w:pPr><w:pStyle w:val="Normal" /></w:pPr><w:r><w:rPr><w:b /></w:rPr><w:t>Bold</w:t></w:r><w:r><w:t xml:space="preserve"> and </w:t></w:r><w:r><w:rPr><w:i /></w:rPr><w:t>italic</w:t></w:r></w:p></w:body></w:document>
