crates/slideforge-docx/src/tests/snapshots/slideforge_docx__tests__core_tests__two_slides_document_xml.snap
---
source: crates/slideforge-docx/src/tests/core_tests.rs
expression: doc_xml
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<w:document xmlns:w="http://schemas.openxmlformats.org/wordprocessingml/2006/main"><w:body><w:p><w:pPr><w:pStyle w:val="Heading1"/></w:pPr><w:r><w:t>Slide One</w:t></w:r></w:p><w:p><w:pPr><w:pStyle w:val="Normal"/></w:pPr><w:r><w:t>Analysis follows.</w:t></w:r></w:p><w:p><w:pPr><w:pStyle w:val="Heading1"/></w:pPr><w:r><w:t>Slide Two</w:t></w:r></w:p><w:p><w:pPr><w:pStyle w:val="Normal"/></w:pPr><w:r><w:t>Analysis follows.</w:t></w:r></w:p></w:body></w:document>
